--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,17 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
-
+= form_tag movies_path, :method => :get do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", 1, @ratings[rating]
+  = submit_tag 'Refresh'
 %table#movies
   %thead
     %tr
-      %th= link_to "Movie Title", movies_path("sort_title")
+      %th= link_to "Movie Title", sort_movies_path("sort_title")
       %th Rating
-      %th= link_to "Release Date", movies_path("sort_release")
+      %th= link_to "Release Date", sort_movies_path("sort_release")
       %th More Info
   %tbody
     - @movies.each do |movie|
